force-app/main/default/objects/AR_Bank_Account__c/fields/Bank__c.field-meta.xml
<CustomField>
    <fullName>Bank__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Bank</label>
    <referenceTo>AR_Bank__c</referenceTo>
    <relationshipLabel>Bank Accounts</relationshipLabel>
    <relationshipName>Bank_Accounts</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>