force-app/main/default/objects/AR_Bank_Account__c/fields/Bank_Account_Code__c.field-meta.xml
<CustomField>
    <fullName>Bank_Account_Code__c</fullName>
    <label>Bank Account Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>