force-app/main/default/objects/AR_Bank_Account__c/fields/Bank_Account_Concatenatated_Value__c.field-meta.xml
<CustomField>
    <fullName>Bank_Account_Concatenatated_Value__c</fullName>
    <formula>Name +&apos; - &apos;+ Account_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bank Account Concatenatated Value</label>
    <type>Text</type>
</CustomField>