force-app/main/default/objects/AR_Bank_Account__c/fields/Bank_Name__c.field-meta.xml
<CustomField>
    <fullName>Bank_Name__c</fullName>
    <formula>Bank__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bank Name</label>
    <type>Text</type>
</CustomField>