force-app/main/default/objects/AR_Bank_Account__c/fields/Chq_Name_FactSheet__c.field-meta.xml
<CustomField>
    <fullName>Chq_Name_FactSheet__c</fullName>
    <label>Chq Name FactSheet</label>
    <length>255</length>
    <type>Text</type>
</CustomField>