force-app/main/default/objects/AR_Bank_Account__c/fields/Company_Formula__c.field-meta.xml
<CustomField>
    <fullName>Company_Formula__c</fullName>
    <formula>IF(ISBLANK(Property__c),  TEXT(Project__r.Company__c) , TEXT(Property__r.Company__c))</formula>
    <label>Company Formula</label>
    <type>Text</type>
</CustomField>