force-app/main/default/objects/AR_Bank_Account__c/fields/EBS_Bank_Account_ID__c.field-meta.xml
<CustomField>
    <fullName>EBS_Bank_Account_ID__c</fullName>
    <description>This field stores Legacy Id of the Nakheel Records</description>
    <externalId>true</externalId>
    <label>EBS Bank Account ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>