force-app/main/default/objects/AR_Bank_Account__c/fields/Exclude_Fusion_Interface__c.field-meta.xml
<CustomField>
    <fullName>Exclude_Fusion_Interface__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Exclude Fusion Interface</label>
    <type>Checkbox</type>
</CustomField>