force-app/main/default/objects/AR_Bank_Account__c/fields/Final_Chq_Name__c.field-meta.xml
<CustomField>
    <fullName>Final_Chq_Name__c</fullName>
    <formula>IF( ISBLANK( Chq_Name_FactSheet__c ) ,  Name ,Chq_Name_FactSheet__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Final Chq Name</label>
    <type>Text</type>
</CustomField>