force-app/main/default/objects/AR_Bank_Account__c/fields/GL_Account__c.field-meta.xml
<CustomField>
    <fullName>GL_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>GL Account</label>
    <referenceTo>AR_GL_Account__c</referenceTo>
    <relationshipLabel>Bank Accounts</relationshipLabel>
    <relationshipName>Bank_Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>