force-app/main/default/objects/AR_Bank_Account__c/fields/Gl_Account_Id__c.field-meta.xml
<CustomField>
    <fullName>Gl_Account_Id__c</fullName>
    <formula>GL_Account__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Gl Account Id</label>
    <type>Text</type>
</CustomField>