force-app/main/default/objects/AR_Bank_Account__c/fields/Is_DHLE__c.field-meta.xml
<CustomField>
    <fullName>Is_DHLE__c</fullName>
    <formula>OR(Property__r.Project_Inv__r.Legal_Entity_DHLE__c != null ,Project__r.Legal_Entity_DHLE__c != null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is DHLE</label>
    <type>Checkbox</type>
</CustomField>