force-app/main/default/objects/AR_Bank_Account__c/fields/Merchant_Id__c.field-meta.xml
<CustomField>
    <fullName>Merchant_Id__c</fullName>
    <label>Merchant Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>