force-app/main/default/objects/AR_Bank_Account__c/fields/Project_Bank_Type__c.field-meta.xml
<CustomField>
    <fullName>Project_Bank_Type__c</fullName>
    <label>Project Bank Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BTS</fullName>
            </value>
            <value>
                <fullName>Land</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>