force-app/main/default/objects/AR_Bank_Account__c/fields/Project_Code__c.field-meta.xml
<CustomField>
    <fullName>Project_Code__c</fullName>
    <formula>Project__r.Project_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project Code</label>
    <type>Text</type>
</CustomField>