force-app/main/default/objects/AR_Bank_Account__c/fields/Project_Property_Code__c.field-meta.xml
<CustomField>
    <fullName>Project_Property_Code__c</fullName>
    <formula>If(ISBLANK(Project__r.Project_Code__c),Property__r.PropertyCode__c ,Project__r.Project_Code__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project Property Code</label>
    <type>Text</type>
</CustomField>