force-app/main/default/objects/AR_Bank_Account__c/fields/QR_Code__c.field-meta.xml
<CustomField>
    <fullName>QR_Code__c</fullName>
    <description>if(ISPICKVAL( Approval_Status__c , &apos;Approved&apos;), IMAGE(&apos;https://chart.googleapis.com/chart?chs=150x150&amp;cht=qr&amp;chl= https://dubaiproperties.my.site.com/updateLead/bankdetails/?type=newq%26Id=&apos;+CASESAFEID(Id),&apos;Scan&apos;),&apos;&apos;)</description>
    <formula>if(ISPICKVAL( Approval_Status__c , &apos;Approved&apos;), IMAGE(&apos;https://api.qrserver.com/v1/create-qr-code/?size=100x100&amp;data=https://dubaiproperties.my.site.com/updateLead/&apos;+IF( ISPICKVAL( Property__r.Company__c , &apos;Nakheel&apos;),&apos;nklbankdetails&apos;,&apos;bankdetails&apos;)+&apos;/?type=newq%26Id=&apos;+CASESAFEID(Id),&apos;Scan&apos;),&apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>QR Code</label>
    <type>Text</type>
</CustomField>