force-app/main/default/objects/AR_Bank_Account__c/fields/Sub_Account_Code__c.field-meta.xml
<CustomField>
    <fullName>Sub_Account_Code__c</fullName>
    <label>Sub Account Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>