force-app/main/default/objects/AR_Bank_Account__c/fields/Sur_La_Mer_PH1__c.field-meta.xml
<CustomField>
    <fullName>Sur_La_Mer_PH1__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sur La Mer PH1</label>
    <type>Checkbox</type>
</CustomField>