force-app/main/default/objects/AR_Bank_Account__c/fields/UniqueCode__c.field-meta.xml
<CustomField>
    <fullName>UniqueCode__c</fullName>
    <formula>IF(TEXT( Approval_Status__c ) == &apos;Approved&apos;, Bank_Account_Code__c + &apos;-&apos; + Project_Property_Code__c, &apos;NONApproved&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>UniqueCode</label>
    <type>Text</type>
</CustomField>