force-app/main/default/objects/AR_Bank_Account__c/fields/Yardi_GL_Code__c.field-meta.xml
<CustomField>
    <fullName>Yardi_GL_Code__c</fullName>
    <formula>GL_Account__r.Yardi_GlCode__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Yardi GL Code</label>
    <type>Text</type>
</CustomField>